--- a/pom.xml
+++ b/pom.xml
@@ -32,7 +32,126 @@
     <artifactId>commons-io</artifactId>
     <version>2.11.0</version>
 </dependency>
-
-  
   </dependencies>
+  
+  <profiles>
+  <profile>
+  <id>batchexecution</id>
+<build>
+<pluginManagement>
+<plugins>
+ <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-surefire-plugin</artifactId>
+        <version>3.0.0-M5</version>
+        <configuration>
+          <suiteXmlFiles>
+            <suiteXmlFile>testNg_CrossBrowserFullRegression.xml</suiteXmlFile>
+          </suiteXmlFiles>
+        </configuration>
+      </plugin>
+  
+  </plugins>
+
+</pluginManagement>
+</build>  
+  </profile>
+  
+  <profile>
+  <id>fullbatchparallel</id>
+<build>
+<pluginManagement>
+<plugins>
+ <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-surefire-plugin</artifactId>
+        <version>3.0.0-M5</version>
+        <configuration>
+          <suiteXmlFiles>
+            <suiteXmlFile>testng_FullBatchParallel.xml</suiteXmlFile>
+          </suiteXmlFiles>
+        </configuration>
+      </plugin>
+  
+  </plugins>
+
+</pluginManagement>
+</build>  
+  </profile>
+  
+  <profile>
+  <id>group</id>
+<build>
+<pluginManagement>
+<plugins>
+ <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-surefire-plugin</artifactId>
+        <version>3.0.0-M5</version>
+        <configuration>
+          <suiteXmlFiles>
+            <suiteXmlFile>testng_Group.xml</suiteXmlFile>
+          </suiteXmlFiles>
+        </configuration>
+      </plugin>
+  
+  </plugins>
+
+</pluginManagement>
+</build>  
+  </profile>
+  
+  <profile>
+  <id>regional</id>
+<build>
+<pluginManagement>
+<plugins>
+ <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-surefire-plugin</artifactId>
+        <version>3.0.0-M5</version>
+        <configuration>
+          <suiteXmlFiles>
+            <suiteXmlFile>testng_Regional.xml</suiteXmlFile>
+          </suiteXmlFiles>
+        </configuration>
+      </plugin>
+  
+  </plugins>
+
+</pluginManagement>
+</build>  
+  </profile>
+  
+  <profile>
+  <id>smoke</id>
+<build>
+<pluginManagement>
+<plugins>
+ <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-surefire-plugin</artifactId>
+        <version>3.0.0-M5</version>
+        <configuration>
+          <suiteXmlFiles>
+            <suiteXmlFile>testng_smoke.xml</suiteXmlFile>
+          </suiteXmlFiles>
+        </configuration>
+      </plugin>
+  
+  </plugins>
+
+</pluginManagement>
+</build>  
+  </profile>
+  
+  
+  
+  
+  
+  
+  
+  
+  </profiles>
+ 
 </project>
